Firefly/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: firefly
  name: firefly
  namespace: firefly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  strategy: {}
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
      - image: fireflyiii/core:latest
        name: core
        volumeMounts:
            - name: firefly-storage
              mountPath: /var/www/html/storage
      volumes:
        - name: firefly-storage
          persistentVolumeClaim:
            claimName: firefly-pvc
