Firefly/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: firefly-svc
  name: firefly-svc
  namespace: firefly
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: firefly
  type: ClusterIP
