Firefly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly
  namespace: firefly
spec:
  ingressClassName: nginx
  rules:
  - host: firefly.local
    http:
      paths:
      - backend:
          service:
            name: firefly
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
